2004-02-14  Dan Winship  <danw@ximian.com>

	* configure.in: Use POSIX-compliant "test $foo = bar", rather than
	GNU-only "test $foo == bar". #54354, from Julio M. Merino Vidal.

2004-02-12  Joe Shaw  <joe@ximian.com>

	* libsoup/soup-dns.c (check_hostent): Call read() in a do-while
	loop to prevent DNS errors from short reads.

2004-02-11  Joe Shaw  <joe@ximian.com>

	* configure.in: Bumped version number to 2.1.7 and libtool
	current. 

2004-02-11  Dan Winship  <danw@ximian.com>

	* libsoup/soup-connection.c (soup_connection_disconnect): Update
	Joe's comment here with a gory explanation of exactly what's going
	on. (It's not just an SSL bug either, it affects all connections.)

2004-02-10  Joe Shaw  <joe@ximian.com>

	* libsoup/soup-connection.c (soup_connection_disconnect): Add a
	workaround for SSL connections which time-out but don't close the
	socket until we try sending data again later.

	* libsoup/soup-socket.c (soup_socket_connect, soup_socket_listen):
	Don't free the sockaddr from soup_address_get_sockaddr(); we don't
	own it, the SoupAddress does.

2004-02-09  JP Rosevear  <jpr@ximian.com>

	* configure.in: Bump libtool numbers

2004-02-05  Dan Winship  <danw@ximian.com>

	* libsoup/soup-session.c (soup_session_add_filter): Ref the filter
	when adding it.
	(soup_session_remove_filter): And unref it here (we were already
	unreffing it in dispose().)

2004-02-05  Joe Shaw  <joe@ximian.com>

	* libsoup/soup-dns.c (soup_dns_entry_unref): Don't try to free the
	hostent if it's NULL.
	(soup_dns_entry_check_lookup): If the entry is resolved, but the
	hostent is NULL, uncache it.

2004-02-04  Dan Winship  <danw@ximian.com>

	* libsoup/soup-connection-ntlm.c (ntlm_authorize_pre): Always
	remove the WWW-Authenticate headers before returning, so the
	session won't fall back to Basic auth. Also, leave the connection
	in the "authenticating" state rather than setting it to
	"authenticated".
	(ntlm_authorize_post): Only requeue the message if it's in the