@@ -1,3 +1,9 @@
+2004-02-17  Rodney Dawes  <dobey@ximian.com>
+
+	* libsoup/soup-message.c (soup_message_new): HTTP connections require
+	a hostname, and we also hash on the host for message queueing in the
+	session, if the host is NULL we free the SoupUri and return NULL
+
 2004-02-14  Dan Winship  <danw@ximian.com>
 
 	* configure.in: Use POSIX-compliant "test $foo = bar", rather than
